--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="viewport" content="widh=device-width, initial-scale=1.0 ">
         <title>Restaurent</title>
         <link href="style (1).css" rel="stylesheet">
     </head>
